tests/error/protocol_errors/function_body.err
Error: Unexpected function body (at $FILE:8:8)
  | 
6 |     @guppy.require
7 |     def foo(self: "MyProto", x: int) -> str:
8 |         return "abcdef"
  |         ^^^^^^^^^^^^^^^ Body of declared function `foo` must be empty

Guppy compilation failed due to 1 previous error
